--- a/Your Valult/Base.lproj/Main.storyboard
+++ b/Your Valult/Base.lproj/Main.storyboard
@@ -1,25 +1,204 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="89V-6I-N7h">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item 2-->
+        <scene sceneID="B7h-dn-NTc">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="a8p-mG-Tq4" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="IfP-DS-BSs"/>
+                        <viewControllerLayoutGuide type="bottom" id="jHH-Hj-0bp"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="ZRV-Ru-rwD">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niH-Vn-PJQ">
+                                <rect key="frame" x="16" y="37" width="46" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="d9D-mF-osq"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w6d-B3-0kz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="103" y="232"/>
+        </scene>
+        <!--Photos-->
+        <scene sceneID="hAg-WR-jT3">
+            <objects>
+                <viewController title="Photos" id="1bJ-VV-SaS" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NiE-C0-VtF"/>
+                        <viewControllerLayoutGuide type="bottom" id="ohd-9D-8vE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fsT-GW-g0a">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6GC-xY-dFh">
+                                <rect key="frame" x="13" y="68" width="54" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="Ywz-Ke-awo"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GiH-gI-BTr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="102" y="-429"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ooR-pJ-4Jv">
+            <objects>
+                <tabBarController id="89V-6I-N7h" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="e6B-42-y1F">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="1bJ-VV-SaS" kind="relationship" relationship="viewControllers" id="0zH-9A-CEY"/>
+                        <segue destination="a8p-mG-Tq4" kind="relationship" relationship="viewControllers" id="HzQ-gp-TgC"/>
+                        <segue destination="da1-wm-XRH" kind="relationship" relationship="viewControllers" id="Ahw-J7-PKI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vbt-Kl-fG1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-720" y="-99"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="oJ0-M4-waY">
+            <objects>
+                <viewController id="da1-wm-XRH" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uL0-4F-2b5"/>
+                        <viewControllerLayoutGuide type="bottom" id="Khj-cT-wa0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="T6C-qF-au1">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5T5-Lt-dzb">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Internet Accounts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0C-kb-R6l">
+                                        <rect key="frame" x="214" y="31" width="172" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="IAx-bj-7fs"/>
+                                            <constraint firstAttribute="width" constant="172" id="N5b-S4-7Pv"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="klF-F7-r2W">
+                                        <rect key="frame" x="554" y="19" width="42" height="33"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="33" id="MjJ-Rj-P8W"/>
+                                            <constraint firstAttribute="width" constant="42" id="qmn-O4-mUu"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <state key="normal" title="+"/>
+                                        <connections>
+                                            <segue destination="V93-Al-QKK" kind="show" id="Fb8-1k-nw0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.066666666666666666" green="0.63529411764705879" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="klF-F7-r2W" secondAttribute="bottom" constant="8" id="8gz-m5-b18"/>
+                                    <constraint firstAttribute="bottom" secondItem="l0C-kb-R6l" secondAttribute="bottom" constant="8" id="GFV-OU-zJm"/>
+                                    <constraint firstAttribute="height" constant="60" id="Lyk-WL-vWX"/>
+                                    <constraint firstAttribute="trailing" secondItem="klF-F7-r2W" secondAttribute="trailing" constant="4" id="bhg-sV-Wgy"/>
+                                    <constraint firstItem="l0C-kb-R6l" firstAttribute="centerX" secondItem="5T5-Lt-dzb" secondAttribute="centerX" id="dg9-It-TVE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5T5-Lt-dzb" firstAttribute="top" secondItem="T6C-qF-au1" secondAttribute="top" id="Dda-Se-g2B"/>
+                            <constraint firstAttribute="trailing" secondItem="5T5-Lt-dzb" secondAttribute="trailing" id="LSe-3d-cje"/>
+                            <constraint firstItem="5T5-Lt-dzb" firstAttribute="leading" secondItem="T6C-qF-au1" secondAttribute="leading" id="flD-Up-62O"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="FeV-D8-9Kd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tHk-H9-LYT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-587" y="878"/>
+        </scene>
+        <!--Entry Internet AccountVC-->
+        <scene sceneID="WE3-WN-Ili">
+            <objects>
+                <viewController id="V93-Al-QKK" customClass="EntryInternetAccountVC" customModule="Your_Valult" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BSW-u8-FqK"/>
+                        <viewControllerLayoutGuide type="bottom" id="Pd9-Fy-mLL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="N4r-DO-yHZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CgV-JN-7FI">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accounts Detail Entry " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="po9-iA-qKT">
+                                        <rect key="frame" x="187" y="28" width="199" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="fzU-RS-HjK"/>
+                                            <constraint firstAttribute="width" constant="199" id="o6S-Gq-MEJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kjE-YQ-oJZ">
+                                        <rect key="frame" x="8" y="22" width="43" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="1PC-rq-VqP"/>
+                                            <constraint firstAttribute="width" constant="43" id="czo-AZ-tB8"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <state key="normal" title="Back"/>
+                                        <connections>
+                                            <action selector="btnBack:" destination="V93-Al-QKK" eventType="touchUpInside" id="xVH-Cw-HlR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.066666666669999999" green="0.63529411759999999" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="kjE-YQ-oJZ" firstAttribute="leading" secondItem="CgV-JN-7FI" secondAttribute="leading" constant="8" id="NjX-dV-uJZ"/>
+                                    <constraint firstAttribute="height" constant="60" id="Qft-Ge-KS2"/>
+                                    <constraint firstItem="po9-iA-qKT" firstAttribute="centerX" secondItem="CgV-JN-7FI" secondAttribute="centerX" constant="-13.5" id="R5H-FN-GtS"/>
+                                    <constraint firstAttribute="bottom" secondItem="kjE-YQ-oJZ" secondAttribute="bottom" constant="8" id="dCj-qh-QEv"/>
+                                    <constraint firstAttribute="bottom" secondItem="po9-iA-qKT" secondAttribute="bottom" constant="8" id="yin-df-Y35"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CgV-JN-7FI" firstAttribute="top" secondItem="N4r-DO-yHZ" secondAttribute="top" id="0rf-Gu-p74"/>
+                            <constraint firstAttribute="trailing" secondItem="CgV-JN-7FI" secondAttribute="trailing" id="6rE-Xn-AVQ"/>
+                            <constraint firstItem="CgV-JN-7FI" firstAttribute="leading" secondItem="N4r-DO-yHZ" secondAttribute="leading" id="sfn-a9-0Gr"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="DmL-SF-oGh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YZL-x2-z8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="148" y="896"/>
         </scene>
     </scenes>
 </document>
